--- a/flower-display.html
+++ b/flower-display.html
@@ -18,7 +18,6 @@
   </style>
 
   <script src="./js/three.js"></script>
-  <script src="./js/tw.js"></script>
   <script src="./js/OrbitControls.js"></script>
   <script src="./js/SceneUtils.js"></script>
   <!-- <script src="./js/dat.gui.js"></script> -->
@@ -32,6 +31,38 @@
 
       // create a scene
       var scene = new THREE.Scene();
+
+
+      var cameraParams = {
+            near: 1,
+            far: 100,
+            fov: 75,                 // degrees
+            aspectRatio: 1000 / 600,   // from dimensions of the canvas, see CSS
+            atX: 10,
+            atY: 4,
+            atZ: 10,
+            eyeX: 0,
+            eyeY: 2,
+            eyeZ: 0,
+            upX: 0,
+            upY: 1,
+            upZ: 0,
+        };
+
+        // setupCamera() function creates and returns a camera with the desired parameters
+
+        function setupCamera(cameraParameters) {
+            // set up an abbreviation 
+            var cp = cameraParameters;
+            // create an initial camera with the desired shape
+            var camera = new THREE.PerspectiveCamera(cp.fov, cp.aspectRatio, cp.near, cp.far);
+            // set the camera location and orientation
+            camera.position.set(cp.eyeX, cp.eyeY, cp.eyeZ);
+            camera.up.set(cp.upX, cp.upY, cp.upZ);
+            camera.lookAt(new THREE.Vector3(cp.atX, cp.atY, cp.atZ));
+            return camera;
+        }
+
 
       // displayPanels() displays three panels with texture-mapped image of floral scene
 
@@ -68,20 +99,35 @@
         planeMeshL.rotation.y = Math.PI / 4;
         scene.add(planeMeshL);
 
-        TW.render();    // render the scene
+        renderer.render(scene, camera);
       }
 
-      var renderer = new THREE.WebGLRenderer();
+var renderer = new THREE.WebGLRenderer();
 
-      TW.mainInit(renderer, scene);
+var cp = cameraParams;
 
-      var state = TW.cameraSetup(renderer,
-        scene,
-        {
-          minx: -8, maxx: 8,
-          miny: -5, maxy: 5,
-          minz: 0, maxz: 8
-        });
+var camera = setupCamera(cp);
+
+var canvasElt = renderer.domElement;
+document.body.appendChild(canvasElt);
+renderer.setSize(canvasElt.clientWidth,canvasElt.clientHeight);
+renderer.setClearColor( 0xdddddd, 1);
+
+const controls = new THREE.OrbitControls(camera, renderer.domElement);
+controls.update();
+function animate() {
+
+requestAnimationFrame( animate );
+
+// required if controls.enableDamping or controls.autoRotate are set to true
+controls.update();
+
+renderer.render( scene, camera );
+
+}
+animate();
+
+renderer.render(scene, camera);
 
       // create a TextureLoader for loading the image file
       var loader = new THREE.TextureLoader();
